--- a/eTism-ng/src/index.html
+++ b/eTism-ng/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>QOVID19 - Angular 9 Coronavirus (COVID-19) Awareness & Prevention</title>
+        <title>eTism - Angular 9</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
